--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 click==6.6
 path.py==8.2.1
-lxml==4.7.1
-pyItunes==1.4
+lxml==4.9.3
+pyItunes @ git+https://github.com/coderforlife/pyitunes.git#egg=pyItunes
